--- a/hello-world.html
+++ b/hello-world.html
@@ -11,4 +11,6 @@
   <li>Japanese: Konnichiwa, sekai!</li>
   <li>French: Bonjour, monde!</li>
   <li>Kinyarwna, Mwirwe, isi!</li>
+  <li>German: Guten tag, Welt!</li>
+  <li>Pig latin: Ellohay orld-way!</li>
 </ul>
